# Taggle_Test

./: .editorconfig  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_INTEGRATION.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  RAILWAY_SETUP.md  README.md  railway.toml  vercel.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: backend-lint-test.yml  docker-build.yml  frontend-lint-test.yml  security-scan.yml
backend/: .env.example  ANALYSIS_API.md  CORS_ENV_FIX.md  Dockerfile  PROMPT_ENGINE.md  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  analysis.py  github.py  prompt_edit.py
backend/app/models/: __init__.py  analysis.py  base.py  github.py  prompt_edit.py
backend/app/schemas/: __init__.py  analysis.py  base.py  github.py  prompt_edit.py
backend/app/services/: code_analyzer.py  edit_planner.py  formatting_service.py  github.py  llm_provider.py  test_runner.py  validation_service.py
backend/app/utils/: diff_utils.py  encryption.py  language_adapter.py
backend/tests/: conftest.py  test_analysis_api.py  test_analysis_service.py  test_config.py  test_main.py  test_prompt_edit_api.py
docs/: environment.md
frontend/: .env.example  .gitignore  AGENT_CONSOLE.md  Dockerfile  README.md  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/__tests__/: page.test.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/github/: page.tsx
frontend/src/lib/: analysis-api.ts  api.ts  github-api.ts
frontend/src/store/: analysis-store.ts  auth-store.ts  explorer-store.ts  ui-store.ts
frontend/src/styles/: globals.css
frontend/src/types/: analysis.ts  auth.ts  index.ts  prompt.ts  repository.ts
shared/: .env.example  docker-compose.yml
(+21 files in other folders)
